# WallpaperSplitter

./: .gitignore  CMakeLists.txt  README.md  ScreensItem.cpp  ScreensItem.h  main.cpp  offsetdialog.cpp  offsetdialog.h  offsetdialog.ui  wallpapersplitter.cpp  wallpapersplitter.h  wallpapersplitter.ui  wallpapersplitter_old.cpp  wallpapersplitter_old.h  wallpapersplitter_old.ui
assets/: metainfo.xml  resources.qrc  wallpaper_splitter.desktop
src/: ScreensItem.cpp  ScreensItem.h  graphicsview.cpp  graphicsview.h  main.cpp  screensitem.cpp  screensitem.h  wallpapersplitter.cpp  wallpapersplitter.h  wallpapersplitter.ui
